# eigen-fpsan

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
include/eigen_fpsan/: eigen_fpsan.hpp
src/: demo_utils.hpp  determinant_demo.cpp  least_squares_demo.cpp  solve_demo.cpp
